Implemented: -Scoring for each round and adding + displaying score -GUI operation improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <string-array name="spinner_options">
+        <item>Select Scoring</item>
         <item>Low</item>
         <item>4</item>
         <item>5</item>
