--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">ThirtyUpg1</string>
     <string name="action_settings">Settings</string>
     <string name="remind_text">Remember to select all, and only, the dice you want to score</string>
+    <string name="score_text">Score: %1$d</string>
+    <string name="rolls_text">Rolls left: %1$d</string>
 
     <string-array name="spinner_options">
         <item>Select Scoring</item>
